--- a/EventInfo/WebContent/front/css/header.css
+++ b/EventInfo/WebContent/front/css/header.css
@@ -35,9 +35,39 @@ body,html{
   padding: 0px;
   min-width:100px;
 }
+ 
+.lb-wrap {
+  width: 50%;
+  margin: 10px auto;
+  
+  position: relative;
+}
+.lb-wrap img {
+  width: 100%;
+  vertical-align: middle;
+}
+.lb-text {
+  padding: 10px 20px;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+/* Layout(No Edit) */
+@media(max-width:440px) {
+  .lb-wrap {
+  width: 95%;
+  }
+}
+ 
   
 img{
 	min-width:100px;
+	display: block; 
+	margin: 0px auto;
 }
 
 video{
@@ -172,12 +202,12 @@ article{
       float: left;
    }
    article>video{
-      postion: relative;
+      position: relative;
       width:100%;
 
    }
    article>pre{
-      /* font-family: 'Do Hyeon', sans-serif; */
+     
       font-family: 'ImcreSoojin';
       font-size: 2.2em;
       position: absolute;
@@ -196,7 +226,7 @@ article{
   }
 
 footer>pre{
-  /* font-family: 'Black Han Sans', sans-serif; */
+ 
   font-family: 'ImcreSoojin';
   box-shadow: 0px 2px 10px 0px #b4b4b4 inset;
   font-size: 1.0em;
