--- a/EventInfo/WebContent/front/css/readReview.css
+++ b/EventInfo/WebContent/front/css/readReview.css
@@ -18,6 +18,7 @@
     font-weight: normal;
     font-style: normal;
 }
+
 tbody{
 	background-color:white;
 }
@@ -39,7 +40,7 @@ table{
 	text-align:center;
 	border-top:3px solid #eeeeee;
 	border-left:3px solid #eeeeee;
-	border-right:3px solid #ff7276;
+	border-right:3px solid #eeeeee;
 	border-bottom:3px solid #ff7276;
 	padding-top:10px;
 	padding-left:10px;
@@ -82,31 +83,97 @@ a{
 	font-family: 'NIXGONM-Vb';
 }
 .title2{
-	float:right;
+	position: relative;  
+	margin-bottom: 5px; 
+	font-weight: bold; 
+	font-size:1em; 
+	font-weight: bold; 
+	font-family: 'NIXGONM-Vb'
+}
+.title3{
 	color:grey;
-	font-size:0.8em;
-	font-family: 'GmarketSansMedium';
+	font-family: 'NIXGONM-Vb';	
+	position: relative; 
+	font-weight: bold;
 }
 .td2{
 	font-family: 'IBMPlexSansKR-Regular';
-	color:#727272;	
+	font-size: 1.2em;
+	color:#727272;
+	margin: auto;
+	font-weight: bold; 
+	
 }
 .td3{
 	height:50px;
 	font-size:0.8em;
 	color:grey;
 	vertical-align: bottom;
+	float: right;
 }
 .button1{
 	font-family: 'GmarketSansMedium';
 	width:80px;
 	height:30px;
-	font-size:0.8em;
+	font-size:1.0em;
 	margin-right:10px;
-	border-top:0;
-	border-left:0;
+	border-top: 2px solid #ff7276;
+	border-left: 2px solid #ff7276;
 	border-right:2px solid #ff7276;
 	border-bottom:2px solid #ff7276;
 	float:left;
 	background-color:white;
+	position: relative;
+	height: 40px;
 }
+.inputs_rel {
+	position: relative;
+	width: 30px;
+	font-size: 1em;
+}
+.inputs {
+	position: absolute;
+	right: 3rem;
+}
+
+.reply{
+	display:flex; 
+	width: 95%;
+	height:auto; 
+	color:#727272; 
+	margin-bottom: 20px; 
+	border-style: ridge; 
+	border-width: 2px; 
+}
+.reply_text{
+	display:block;
+	font-size: 1.1em; 
+	text-align: center;
+	margin: auto;
+}
+.button_del{
+	text-align: center; 
+	margin-bottom: 10px; 
+	margin-left: 2px; 
+	display:block; 
+	width:4%; 
+	height: 20px; 
+	font-size:1.1em; 
+	border: 3px solid #ff7276; 
+}
+
+.button1:hover{
+	background-color: #eeeeee;
+}
+.button_del:hover{
+	background-color: #eeeeee;
+}
+.footer{	
+  height:280px; 
+  width: 65%;
+  position:absolute; 
+  left: 0;
+  bottom: 0; 
+  margin-left: 330px;
+  background-color: lightgrey;
+ }
