--- a/EventInfo/WebContent/front/css/writeReview.css
+++ b/EventInfo/WebContent/front/css/writeReview.css
@@ -53,9 +53,14 @@ nav{
 
 
 footer{
-  width: 100%;
-  height: 10%;
-}
+  height:60px; 
+  width: 80%;
+  position:absolute; 
+  left: 0;
+  bottom: 0; 
+  margin-bottom: 182px;
+ }
+
 .title{
   top:0;
   position:sticky;
@@ -259,21 +264,20 @@ footer>pre{
 	margin:0 auto;
 }
 .wR_main_title{
-	margin-top:30px;
 	font-size:1.5em;
 	width:100%;
 	height:50px;
 	text-align:center;
+	font-family: 'NIXGONM-Vb';
 	border-top:3px solid #eeeeee;
 	border-left:3px solid #eeeeee;
-	border-right:3px solid #ff7276;
+	border-right:3px solid #eeeeee;
 	border-bottom:3px solid #ff7276;
 	padding-top:15px;
 	background-color:white;
-	margin-top:20px;
+	margin-top:30px;
 	margin-bottom:20px;
 }
-
 .review_button1{
 	font-family: 'GmarketSansMedium';
 	width:60%;
